# Cub3D

./: .gitignore  CMakeLists.txt  Makefile  README.md  _utils.c  a.out  cube3d.h  cube3d.h.gch  cube3d_utils.c  events.c  ft_split.c  get_next_line.c  get_next_line_utils.c  hud.c  main.c  map.cub  map2.cub  map_file_parser.c  map_file_parser1.c  map_file_parser2.c  map_file_parser3.c  minimap  minimap.c  raycast  raycasting.c  read_ma  read_map  read_map.c  render.c  sprite.c  texture.c  utils.c  utils2  utils2.c  walls.c
.run/: Unnamed.run.xml
bonus/: destruct_bonus.c  events_bonus.c  main_bonus.c  misc_bonus.c  render_bonus.c  sprite_bonus.c  sprite_utils2_bonus.c  sprite_utils_bonus.c  wall_utils_bonus.c  walls_bonus.c
img/: 0.xpm  1.xpm  2.xpm  3.xpm  4.xpm  5.xpm  6.xpm  7.xpm  9.xpm  B.xpm  Ca.xpm  N.xpm  Sp.xpm  h.xpm  qq.xpm  sky.xpm  sp3.xpm  ssee.xpm  tomb.xpm
include/: cub3d.h  cube3d.h  libft.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
libs/: a.out  mlx.c
maps/: map.cub  map2.cub
primary/: init_data.c  main.c  map_file_parser.c  map_file_parser_utils.c  parse_floor_ceilling_resolution.c  parse_map.c  parse_textures.c  render.c  screenshot.c  sprite.c  sprite_utils.c  sprite_utils2.c  utils.c  utils2.c  walls.c
raycasting/: .raycast.js.swp  raycast.js
src/: .constants.h.swp  .main.c.swp  _utils.c  main.c
srcs/: cube3d_utils.c  destruct.c  events.c  ft_split.c  get_next_line.c  get_next_line_utils.c  hud.c  init_data.c  intersection.c  main.c  map_error_handling.c  map_file_parser.c  map_file_parser1.c  (+19 more)
(+9 files in other folders)
